--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -62,11 +62,12 @@
                 tools:src="@tools:sample/avatars"/>
         </LinearLayout>
         <TextView
+            android:id="@+id/publication_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/text_size_16sp"
             android:layout_margin="@dimen/margins_4_dp"
-            tools:text="4 hr ago, 10^34 AM"
+            tools:text="4 hr ago, 10:34 AM"
             />
     </LinearLayout>
 
