--- a/app/src/main/res/layout/nt_toolbar.xml
+++ b/app/src/main/res/layout/nt_toolbar.xml
@@ -5,4 +5,6 @@
     android:background="@color/colorPrimary"
     android:theme="@style/NoActionBar"
     android:elevation="4dp"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" />
